--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <!-- css do bootstrap -->
     <link rel="stylesheet" href="./src/framework/bootstrap-5.3.7-dist/css/bootstrap.min.css">
     <!-- css externo -->
-    <link rel="stylesheet" href="./css/index.css">
+    <!-- <link rel="stylesheet" href="./css/index.css"> -->
+    <link rel="stylesheet" href="./css/Index.css">
     <!-- font awesome biblioteca -->
     <script src="https://kit.fontawesome.com/42c04c0a9c.js" crossorigin="anonymous"></script>
 </head>
