--- a/index.html
+++ b/index.html
@@ -32,23 +32,7 @@
                             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                                 <li class="nav-item">
                                     <a class="nav-link" href="#">Link</a>
-                                </li>
-                                <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                                        aria-expanded="false">
-                                        Dropdown
-                                    </a>
-
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-                                </li>
                             </ul>
-                            <form class="d-flex" role="search">
-                                <input class="form-control me-2" type="search" placeholder="Search"
-                                    aria-label="Search" />
-                                <button class="btn btn-outline-success" type="submit">Search</button>
-                            </form>
                         </div>
                     </div>
                 </nav>
@@ -100,7 +84,7 @@
                                     <h5 class="card-title">em desenvolvimento</h5>
                                     <p class="card-text">aguarde estamos trabalhando nisso!
                                     </p>
-                                    <a href="#" class="btn btn-light">Clique aqui!</a>
+                                    <a href="../src/sites/Projeto1/projeto1.html" class="btn btn-light">Clique aqui!</a>
                                 </div>
                             </div>
 
@@ -114,7 +98,7 @@
                                     <h5 class="card-title">em desenvolvimento</h5>
                                     <p class="card-text">aguarde estamos trabalhando nisso!
                                     </p>
-                                    <a href="#" class="btn btn-light">Clique aqui!</a>
+                                    <a href="../src/sites/Projeto2/projeto02.html" class="btn btn-light">Clique aqui!</a>
                                 </div>
                             </div>
                         </div>
