--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                                     <h5 class="card-title">Display em CSS</h5>
                                     <p class="card-text">projeto de um site para explicar os display de um site em css
                                     </p>
-                                    <a href="file:///D:/projetinho/src/sites/project1/projetictinho.html" class="btn btn-light">Clique aqui!</a>
+                                    <a href="./src/sites/Projeto1/projeto1.html" class="btn btn-light">Clique aqui!</a>
                                 </div>
                             </div>
                         </div>
@@ -84,7 +84,7 @@
                                     <h5 class="card-title">em desenvolvimento</h5>
                                     <p class="card-text">aguarde estamos trabalhando nisso!
                                     </p>
-                                    <a href="../src/sites/Projeto1/projeto1.html" class="btn btn-light">Clique aqui!</a>
+                                    <a href="./src/sites/Projeto2/Projeto02.html" class="btn btn-light">Clique aqui!</a>
                                 </div>
                             </div>
 
@@ -98,7 +98,7 @@
                                     <h5 class="card-title">em desenvolvimento</h5>
                                     <p class="card-text">aguarde estamos trabalhando nisso!
                                     </p>
-                                    <a href="../src/sites/Projeto2/projeto02.html" class="btn btn-light">Clique aqui!</a>
+                                    <a href="#" class="btn btn-light">Clique aqui!</a>
                                 </div>
                             </div>
                         </div>
